src/test/deca/context/invalid/while-assignNotBoolean.context
while-assignNotBoolean.deca:3: